src/objects/LHIEndpoint__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Domain__c</fullName>
        <defaultValue>&quot;https://lhiutilitystage.lawhelpinteractive.org&quot;</defaultValue>
        <label>Domain</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventId__c</fullName>
        <defaultValue>&quot;98&quot;</defaultValue>
        <label>Event Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateId__c</fullName>
        <defaultValue>4696</defaultValue>
        <label>Template Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <required>true</required>
        <type>Number</type>
    </fields>
    <label>LHI Endpoint</label>
</CustomObject>